--- a/compose.yml
+++ b/compose.yml
@@ -1,7 +1,7 @@
 services:
   web:
     build: .
-    command: bash -c "bundle && yarn && bundle exec rails db:prepare && yarn build && rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    command: bash -c "bundle && yarn && bundle exec rails db:prepare && yarn build && yarn build:css && rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     tty: true
     stdin_open: true
     volumes:
